# pitci

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  README.md  changelog.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build-test.yml  python-package.yml  version-checker.yml
docs/: README.md  requirements.txt
docs/source/: api.rst  base.rst  checks.rst  conf.py  dispatchers.rst  helpers.rst  index.rst  lightgbm.rst  nonconformity.rst  quick-start.rst  xgboost.rst
examples/: .gitignore  Blog-Feedback-Dataset.ipynb  Blog-Feedback-Dataset_LightGBM.ipynb  Diabetes-Dataset.ipynb  README.md
examples/data/: README.md
pitci/: __init__.py  _version.py  base.py  checks.py  dispatchers.py  docstrings.py  helpers.py  intervals.py  lightgbm.py  nonconformity.py  xgboost.py
tests/: conftest.py  test_AbsoluteErrorConformalPredictor.py  test_LeafNodeScaledConformalPredictor.py  test_checks.py  test_dispatchers.py  test_helpers.py  test_xgboost.py
tests/base/: test_AbsoluteErrorConformalPredictor.py  test_ConformalPredictor.py  test_LeafNodeScaledConformalPredictor.py  test_SplitConformalPredictor.py  test_SplitConformalPredictorMixin.py
tests/lightgbm/: test_LGBMBoosterAbsoluteErrorConformalPredictor.py  test_LGBMBoosterLeafNodeScaledConformalPredictor.py  test_LGBMBoosterLeafNodeSplitConformalPredictor.py  test_LGBMBoosterSplitLeafNodeScaledConformalPredictor.py  test_lightgbm.py
tests/xgboost/: test_XGBSklearnAbsoluteErrorConformalPredictor.py  test_xgboost.py  (+5 more)
